--- a/src/components/User_Dashboard/User_Dashboard.css
+++ b/src/components/User_Dashboard/User_Dashboard.css
@@ -1,14 +1,15 @@
 .user-dashboard {
+  display: flex;
+  justify-content: space-evenly;
   width: 100%;
   min-height: 100vh;
-  display: grid;
-  grid-template-columns: 3fr 1fr;
 }
 
 .game-collection-section {
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 80%
 }
 
 .my-games-heading {
@@ -18,32 +19,35 @@
 .borrowed-games-collection {
   border-style: solid;
   border-radius: 11px;
-  height: 30%;
-  width: 67vw;
-  margin-bottom: 2em;
-  display: flex;
-  flex-direction: row;
-  overflow-x: auto;
-  padding: .7em;
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 1vw;
+  padding: 20px 10px;
+  align-items: center;
+  text-align: center;
+  height: auto;
+  width: 90%;
+  margin-bottom: 1em;
+  overflow: scroll;
+  contain: content;
 }
 
 .game-collection {
   border-style: solid;
   border-radius: 11px;
   display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-template-rows: auto;
-  column-gap: 2vw;
-  row-gap: 2vw;
-  padding: 10px;
-  align-items: baseline;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 1vw;
+  padding: 20px 10px;
+  align-items: center;
   text-align: center;
-  height: 100vh;
-  width: 93%;
+  height: auto;
+  width: 90%;
   margin-bottom: 1em;
   overflow: scroll;
   contain: content;
 }
+
 
 .game-collection-headers {
   display: flex;
@@ -51,22 +55,36 @@
   padding-left: 10%
 }
 
-.borrowed-header {}
+.borrowed-header {
+  width: 20%;
+  border: 1px solid black;
+  text-align: center;
+  transition-duration: 300ms;
+}
 
 .my-games-header {
-  margin-right: 2vw
+  margin-right: 2vw;
+  width: 20%;
+  border: 1px solid black;
+  text-align: center;
+  transition-duration: 300ms;
 }
 
 .borrowed-header:hover {
   cursor: pointer;
+  transform: scale(1.05);
 }
 
 .my-games-header:hover {
   cursor: pointer;
+  transform: scale(1.05);
 }
 
 .header-focus {
-  text-decoration: underline;
+  background: rgb(135, 11, 194);
+  background: linear-gradient(45deg, rgba(135, 11, 194, 1) 1%, rgba(14, 59, 157, 1) 49%, rgba(0, 255, 214, 1) 100%);
+  background-repeat: no-repeat;
+  color: white
 }
 
 .friends-section {
@@ -74,6 +92,7 @@
   height: max-content;
   flex-direction: column;
   padding: 10px;
+  margin-left: 20px;
 }
 
 .my-friends-header {
@@ -85,7 +104,7 @@
   display: flex;
   text-align: center;
   justify-content: space-between;
-  background-color: rgb(50, 108, 245);
+  background-color: rgb(62, 117, 244);
   color: white;
   width: 75%;
   height: 20%;
